metódo que impede números negativos

--- a/mooose-count.html
+++ b/mooose-count.html
@@ -29,22 +29,22 @@
 <p>In this example we are able to count tigers, moose and kangaroos, with different increments, all buttons refering to the same method. This is possible by passing the numbers counted as an argument, and by passing the event.</p>
 <div id="app">
   <div id="tigers">
-    <img src="./img/img_tiger_square.jpeg" width="733" height="733">
+    <img src="./img/img_tiger_square.jpeg" width="400" height="400">
     <button v-on:click="addAnimal($event,1)">+1</button>
     <button v-on:click="addAnimal($event,5)">+5</button>
-    <button v-on:click="addAnimal($event,-1)">-1</button>
+    <button v-on:click="subtractAnimal($event,-1)">-1</button>
   </div>
   <div id="moose">
     <img src="./img/img_moose_square.jpeg" width="549" height="549">
     <button v-on:click="addAnimal($event,1)">+1</button>
     <button v-on:click="addAnimal($event,5)">+5</button>
-    <button v-on:click="addAnimal($event,-1)">-1</button>
+    <button v-on:click="subtractAnimal($event,-1)">-1</button>
   </div>
   <div id="kangaroos">
     <img src="./img/img_kangaroo_square.jpeg" width="582" height="582">
     <button v-on:click="addAnimal($event,1)">+1</button>
     <button v-on:click="addAnimal($event,5)">+5</button>
-    <button v-on:click="addAnimal($event,-1)">-1</button>
+    <button v-on:click="subtractAnimal($event,-1)">-1</button>
   </div>
   <ul>
     <li>Tigers: {{ tigers }}</li>
@@ -59,23 +59,36 @@
     data() {
       return {
         tigers: 0,
-        moose: 0,
-        kangaroos: 0
+        moose:0,
+        kangaroos:0
+
       }
     },
     methods: {
-      addAnimal(e,number) {
-        if(e.target.parentElement.id==="tigers"){
-          this.tigers+=number;
-        }
-        else if(e.target.parentElement.id==="moose"){
-          this.moose+=number;
-        }
-        else{
-          this.kangaroos+=number;
-        }
-      }
+  addAnimal(e, number) {
+    if (e.target.parentElement.id === "tigers") {
+      this.tigers += number;
+    }else  if (e.target.parentElement.id === "moose") {
+      this.moose += number;
+    }else{
+      this.kangaroos += number;
     }
+  },
+  subtractAnimal(e) {
+    if  ( e.target.parentElement.id === "tigers" && this.tigers >0) {
+        this.tigers--;
+      
+    } else if( e.target.parentElement.id === "moose" && this.moose >0) {
+        this.moose--;
+    } else if  ( e.target.parentElement.id === "kangaroos" && this.kangaroos >0) {
+        this.kangaroos--;
+      }  
+       else {
+      alert("O número deve ser maior que 0!"); 
+    }
+  },
+},
+
   })
  app.mount('#app')
 </script>
